# xtask_todo

./: .dockerignore  .gitignore  .todo.json  AGENTS.md  Cargo.toml  LICENSE  README.md  design.md
crates/devshell-vm/: Cargo.toml
crates/devshell-vm/src/: guest_fs.rs  main.rs  server.rs  tests.rs
crates/devshell-vm/tests/: tcp_subprocess.rs
crates/todo/: .todo.json  Cargo.toml  README.md
crates/todo/src/: error.rs  id.rs  lib.rs  list.rs  model.rs  priority.rs  repeat.rs  store.rs  tests.rs
crates/todo/src/devshell/: command.rs  completion.rs  host_text.rs  mod.rs  parser.rs  repl.rs  sandbox.rs  serialization.rs  session_store.rs  todo_io.rs  vfs.rs
crates/todo/src/devshell/command/: dispatch.rs  mod.rs  todo_builtin.rs  types.rs
crates/todo/src/devshell/completion/: candidates.rs  context.rs  helper.rs  mod.rs  tests.rs
crates/todo/src/devshell/repl/: mod.rs  tests.rs
crates/todo/src/devshell/sandbox/: elf.rs  error.rs  export.rs  linux_mount.rs  mod.rs  paths.rs  run.rs  sync.rs  tests.rs
crates/todo/src/devshell/script/: ast.rs  exec.rs  mod.rs  parse.rs  tests.rs
crates/todo/src/devshell/tests/: mod.rs  run_basic.rs  run_io.rs  run_main.rs  run_todo.rs
crates/todo/src/list/: mod.rs  tests.rs
crates/todo/src/tests/: advanced.rs  crud.rs  list_options.rs  mod.rs  priority_repeat.rs
crates/todo/tests/: integration.rs
docs/: design.md  (+20 more)
examples/dev_shell/: Cargo.toml  README.md
examples/dev_shell/.github/workflows/: ci.yml
examples/dev_shell/.specstory/: .project.json
examples/dev_shell/.specstory/history/: 2026-03-13_04-17Z-available-skills-for-superpowers.md  2026-03-13_04-23Z-头脑风暴技能使用.md  2026-03-13_04-24Z-available-skills-for-superpowers.md  2026-03-13_05-15Z-rust-project-skeleton-implementation.md  2026-03-13_05-16Z-task-1-code-review-for-rust-project.md  2026-03-13_05-17Z-virtual-file-system-path-normalization.md  2026-03-13_05-19Z-task-2-vfs-path-normalization-review.md  2026-03-13_05-21Z-virtual-file-system-node-implementation.md  2026-03-13_05-22Z-node-enum-implementation-review.md  2026-03-13_05-23Z-vfs-struct-implementation-in-rust.md  2026-03-13_05-23Z-vfs-struct-review-in-src-vfs-rs.md  2026-03-13_05-25Z-task-5-implementation-for-virtual-fs.md  2026-03-13_05-27Z-review-of-resolve-absolute-function-and-tests.md  2026-03-13_05-29Z-task-6-implementation-for-virtual-file-system.md  2026-03-13_05-34Z-virtual-file-system-mkdir-implementation.md  2026-03-13_05-37Z-task-7-mkdir-implementation-review.md  2026-03-13_05-39Z-virtual-file-system-write-file-implementation.md  2026-03-13_05-43Z-virtual-file-system-implementation.md  2026-03-13_05-46Z-virtual-file-system-touch-implementation.md  2026-03-13_05-47Z-task-11-serialization-implementation.md  2026-03-13_05-52Z-task-12-implementation-for-vfs-serialization.md  2026-03-13_05-54Z-parser-implementation-for-command-line-input.md  2026-03-13_06-00Z-task-14-command-execution-implementation.md  2026-03-13_06-09Z-pipeline-execution-implementation.md  2026-03-13_06-18Z-export-readonly-command-implementation.md  2026-03-13_06-23Z-repl-save-and-exit-integration.md  2026-03-13_06-32Z-task-18-implementation-for-dev-shell.md  2026-03-13_06-35Z-task-19-documentation-and-ci-configuration.md  2026-03-13_10-19Z-adding-rustyline-dependency.md  2026-03-13_10-21Z-task-2-context-parsing-implementation.md  2026-03-13_10-28Z-command-and-path-completion-implementation.md  2026-03-13_10-31Z-rustyline-helper-implementation-for-command-completion.md  2026-03-13_10-37Z-task-implementation-for-path-completion-and-repl.md  2026-03-13_10-42Z-task-8-implementation-details.md
examples/dev_shell/docs/plans/: 2026-03-10-dev-shell-todo-impl-plan.md  2026-03-13-dev-shell-design.md  2026-03-13-dev-shell-impl-plan.md  2026-03-13-tab-completion-design.md  2026-03-13-tab-completion-impl-plan.md
examples/dev_shell/src/: command.rs  completion.rs  lib.rs  main.rs  parser.rs  repl.rs  serialization.rs  vfs.rs
examples/dev_shell/tests/: command_tests.rs  completion_tests.rs  parser_tests.rs  serialization_tests.rs  vfs_tests.rs
xtask/: Cargo.toml
xtask/src/: acceptance.rs  clean.rs  clippy.rs  coverage.rs  fmt.rs  gh.rs  ghcr.rs  git.rs  lib.rs  main.rs  publish.rs  run.rs  tests.rs  todo.rs
xtask/src/acceptance/: checks.rs  mod.rs  report.rs  tests.rs
xtask/src/lima_todo/: args.rs  cmd.rs  helpers.rs  mod.rs  tests.rs  yaml.rs
xtask/src/tests/: clean.rs  clippy.rs  gh.rs  git.rs  mod.rs  run.rs  todo.rs
xtask/src/tests/todo/: mod.rs  todo_cmd.rs  todo_cmd_io.rs  todo_error.rs  todo_helpers.rs
xtask/src/todo/: args.rs  cmd.rs  error.rs  format.rs  init_ai.rs  io.rs  mod.rs
xtask/src/todo/cmd/: dispatch.rs  mod.rs  parse.rs
xtask/tests/: integration.rs  xtask_help.rs
xtask/tests/common/: mod.rs
xtask/tests/complete_delete/: mod.rs
xtask/tests/ghcr_cli/: mod.rs
xtask/tests/show_update/: mod.rs
xtask/tests/todo_list/: basic.rs  import_export.rs  list_json.rs  mod.rs  search_stats.rs
(+209 files in other folders)
