[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
default-run = "xtask"

[[bin]]
name = "todo"
path = "src/bin/todo.rs"

[dependencies]
argh = "0.1"
csv = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2.12", default-features = true }
xtask-todo-lib = { path = "../crates/todo" }
