[package]
name = "xtask-todo-lib"
version = "0.1.13"
edition = "2021"
description = "Todo workspace library and cargo devshell subcommand"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TangCan/xtask_todo"
documentation = "https://docs.rs/xtask-todo-lib"

[lib]
name = "xtask_todo_lib"
path = "src/lib.rs"

[[bin]]
name = "cargo-devshell"
path = "src/bin/cargo_devshell/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# Unix β IPC client (`DEVSHELL_VM_BACKEND=beta`); requires `devshell-vm --serve-socket …` sidecar.
beta-vm = []

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
rustyline = "17"

[lints.clippy]
all = "warn"
