[package]
name = "xtask-todo-lib"
version = "0.1.30"
edition = "2021"
description = "Todo workspace library and cargo devshell subcommand"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TangCan/xtask_todo"
documentation = "https://docs.rs/xtask-todo-lib"

[lib]
name = "xtask_todo_lib"
path = "src/lib.rs"

[[bin]]
name = "cargo-devshell"
path = "src/bin/cargo_devshell/main.rs"

[dependencies]
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false }
rustyline = "17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# β IPC client (Windows 默认 Podman 侧车；Unix 可选 TCP/UDS)。不需要时可 `default-features = false`。
default = ["beta-vm"]
beta-vm = ["dep:base64"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[lints.clippy]
all = "warn"
