[package]
name = "dev_shell"
version = "0.1.0"
edition = "2021"
description = "Minimal in-process shell with VFS and todo integration; install as cargo subcommand"
license = "MIT OR Apache-2.0"
# repository = "https://github.com/你的用户名/xtask_todo"  # 发布前取消注释并替换
# Publish to crates.io as a Cargo subcommand: cargo install dev_shell → cargo devshell

[[bin]]
name = "cargo-devshell"
path = "src/main.rs"

[dependencies]
rustyline = "17"
xtask-todo-lib = "0.1.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# 暂无
