[package]
name = "xtask-todo-devshell"
version = "0.1.0"
edition = "2021"
description = "Minimal in-process shell with VFS and todo integration; install as cargo subcommand"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TangCan/xtask_todo"
# Publish to crates.io: cargo install xtask-todo-devshell → cargo devshell

[[bin]]
name = "cargo-devshell"
path = "src/main.rs"

[dependencies]
rustyline = "17"
xtask-todo-lib = "0.1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# 暂无
